# cake_wallet

./: .gitignore  README.md  analysis_options.yaml  configure_cake_wallet_android.sh  howto-build-android.md  model_generator.sh  pubspec_base.yaml
.github/workflows/: cache_dependencies.yml  pr_test_build.yml
android/app/src/main/java/com/cakewallet/xcash/: Application.java  MainActivity.java
assets/: xcash_node_list.yml
cw-xcash-keep/: README.md  pubspec.yaml
cw-xcash-keep/android/: build.gradle  settings.gradle
cw-xcash-keep/ios/: cw_xcash.podspec
cw-xcash-keep/ios/Classes/: CwXCashPlugin.h  CwXCashPlugin.m
cw-xcash-keep/lib/: pending_xcash_transaction.dart  update_xcash_rate.dart  xcash_subaddress_list.dart  xcash_transaction_creation_exception.dart  xcash_wallet_addresses.dart  xcash_wallet_service.dart
cw-xcash-keep/lib/api/: asset_types.dart  cw_xcash.dart  subaddress_list.dart  xcash_api.dart
cw-xcash-keep/lib/api/structs/: xcash_balance_row.dart
cw_core/lib/: crypto_currency.dart  currency_for_wallet_type.dart  get_height_by_date.dart  node.dart  wallet_info.dart  wallet_type.dart
cw_shared_external/: README.md  pubspec.yaml
cw_shared_external/ios/: cw_shared_external.podspec
cw_xcash/: pubspec.yaml
cw_xcash/android/: CMakeLists.txt
cw_xcash/android/src/main/: AndroidManifest.xml
cw_xcash/android/src/main/kotlin/com/cakewallet/cw_haven/: CwHavenPlugin.kt
cw_xcash/ios/Classes/: SwiftCwXCashPlugin.swift  xcash_api.cpp
cw_xcash/lib/: xcash_account_list.dart  xcash_balance.dart  xcash_transaction_creation_credentials.dart  xcash_transaction_history.dart  xcash_transaction_info.dart  xcash_wallet.dart
cw_xcash/lib/api/: account_list.dart  balance_list.dart  signatures.dart  transaction_history.dart  types.dart  wallet.dart  wallet_manager.dart
cw_xcash/lib/api/structs/: xcash_rate.dart
cw_xcash/lib/mnemonics/: dutch.dart  portuguese.dart
lib/: di.dart  wallet_type_utils.dart
lib/core/: seed_validator.dart
lib/entities/: default_settings_migration.dart  ens_record.dart  node_list.dart  parse_address_from_domain.dart  preferences_key.dart  priority_for_wallet_type.dart  provider_types.dart  update_haven_rate.dart
lib/reactions/: fiat_rate_update.dart  on_current_wallet_change.dart  on_wallet_sync_status_change.dart
lib/src/screens/dashboard/desktop_widgets/: desktop_wallet_selection_dropdown.dart
lib/src/screens/dashboard/pages/: market_place_page.dart
lib/src/screens/dashboard/widgets/: menu_widget.dart
lib/src/screens/receive/: receive_page.dart
lib/src/screens/restore/: wallet_restore_from_keys_form.dart  wallet_restore_page.dart
lib/src/screens/settings/: display_settings_page.dart  domain_lookups_page.dart
lib/src/screens/wallet_list/: wallet_list_page.dart
lib/src/screens/welcome/: welcome_page.dart
lib/store/: settings_store.dart
lib/view_model/: transaction_details_view_model.dart  wallet_creation_vm.dart  wallet_keys_view_model.dart  wallet_new_vm.dart  wallet_restore_view_model.dart
lib/view_model/dashboard/: balance_view_model.dart  dashboard_view_model.dart  transaction_list_item.dart
lib/view_model/exchange/: exchange_view_model.dart
lib/view_model/monero_account_list/: monero_account_edit_or_create_view_model.dart  monero_account_list_view_model.dart
lib/view_model/node_list/: node_create_or_edit_view_model.dart  node_list_view_model.dart
lib/view_model/send/: output.dart  send_view_model.dart
lib/view_model/settings/: other_settings_view_model.dart
lib/view_model/wallet_address_list/: wallet_address_edit_or_create_view_model.dart  wallet_address_list_view_model.dart
lib/xcash/: cw_xcash.dart  xcash.dart
res/values/: strings_ar.arb  strings_bg.arb  strings_cs.arb  strings_de.arb  strings_en.arb  strings_es.arb  strings_fr.arb  strings_ha.arb  strings_hi.arb  strings_hr.arb  strings_id.arb  strings_it.arb  strings_ja.arb  strings_ko.arb  strings_my.arb  strings_nl.arb  strings_pl.arb  strings_pt.arb  strings_ru.arb  strings_th.arb  strings_tl.arb  strings_tr.arb  strings_uk.arb  strings_ur.arb  strings_yo.arb  strings_zh.arb
scripts/android/: app_env.sh  app_icon.sh  build_all.sh  build_openssl.sh  build_xcash.sh  build_xcash_all.sh  build_zmq.sh  copy_monero_deps.sh  pubspec_gen.sh
scripts/docker/: build_xcash.sh  build_xcash_all.sh  copy_xcash_deps.sh
scripts/ios/: app_config.sh  app_env.sh  app_icon.sh  build_all.sh  build_xcash.sh  build_xcash_all.sh  setup.sh
scripts/macos/: build_xcash.sh
tool/: configure.dart
